--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,28 +8,27 @@ version: 1.0.0+1
 environment:
   sdk: ^3.8.1
 
-
 dependencies:
   flutter:
     sdk: flutter
-
-  
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-
   flutter_native_splash: ^2.4.6
-
-
-
 
 flutter:
   uses-material-design: true
+
   assets:
-    - assets/images/home.jpg
+    - assets/images/home1.jpg
+
+  fonts:
+    - family: MyFlutterApp
+      fonts:
+        - asset: icon/fonts/MyFlutterApp.ttf
 
 flutter_native_splash:
   color: '#000000'
